# agilex_teleop

./: .gitignore  .gitmodules  CHANGELOG.md  README(EN).MD  README.MD  README.md  README_zh-CN.md  pyproject.toml  requirements.txt
benchmarks/: benchmark_ik.py  benchmark_trajectory_continuity.py
docs/: DEBUG_AND_BENCHMARK.md  DEPENDENCY_AUDIT.md  can_user.md  ubuntu_24_04_pip_install.md
docs/effector/agx_gripper/: agx_gripper-API使用文档.MD  agx_gripper_api.md
docs/effector/revo2/: revo2-API使用文档.MD  revo2_api.md
docs/nero/: First-TimeUserGuide(CAN).MD  first_time_user_guide_can.md  nero-API使用文档.MD  nero_api.md
docs/piper/: piper-API使用文档.MD  piper_api.md
examples/: debug_single_target.py
nero/: __init__.py
nero/kinematics/: analytic_IK_solver.py
nero/teleop/: nero_dual_arm.py  nero_teleop_config.py
nero/teleop/interface/: __init__.py  nero_interface_client.py  nero_interface_server.py
nero/tests/: reset.py  test_pos_flw_ik.py
nero_interface/: analytic_IK_solver.py  interface_client_test.ipynb  interface_server_test.ipynb  interface_server_test.py  nero_interface_client.py  nero_interface_server.py  servo_p_test.py
pyAgxArm/api/: agx_arm_factory.py  agx_arm_factory.pyi
pyAgxArm/demos/: detect_arm.py
pyAgxArm/demos/nero/: test1.py
pyAgxArm/demos/piper/: test1.py
pyAgxArm/demos/piper_h/: test1.py
pyAgxArm/demos/piper_l/: test1.py
pyAgxArm/utiles/: physical_value_vaildator.py
robotic_arm_kinematics/nero_ik/: ik_solver.py  test_ik_solver.py
tests/: test_fk_ik_consistency.py  test_jacobian_consistency.py  test_joint_limits.py
(+18 files in other folders)
